--- a/cookbooks/rax-magento/Vagrantfile
+++ b/cookbooks/rax-magento/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure('2') do |config|
-  config.vm.hostname = 'magento-rackspace'
+  config.vm.hostname = 'rax-magento'
   case ENV['VMBOX']
   when 'centos65'
     config.vm.box = "centos-6.5"
@@ -22,6 +22,7 @@ Vagrant.configure('2') do |config|
         :server_repl_password => 'replpass'
       },
       :magento => {
+        :domain => 'example.com',
         :db => {
           :password => 'magepass'
         },
@@ -30,7 +31,7 @@ Vagrant.configure('2') do |config|
     }
 
     chef.run_list = [
-        'recipe[magento-rackspace::default]'
+        'recipe[rax-magento::default]'
     ]
   end
 end
