--- a/magento-single.yaml
+++ b/magento-single.yaml
@@ -259,10 +259,10 @@ resources:
           domain: { get_param: domain }
           db:
             database: { get_param: database_name }
-            host: "127.0.0.1"
+            host: "localhost"
             username: { get_param: database_user }
             password: { get_attr: [database_password, value] }
-            acl: "127.0.0.1"
+            acl: "localhost"
         memcached:
           listen: "127.0.0.1"
         mysql:
@@ -277,6 +277,8 @@ resources:
               email: { get_param: admin_email}
               username: { get_param: username }
               password: { get_attr: [admin_password, value] }
+          firewall:
+            tcp: [80, 443]
         run_list: ["recipe[apt]",
                    "recipe[build-essential]",
                    "recipe[rax-magento]"]
