--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -7,6 +7,10 @@ flavor-weight: 2
 reach-info:
   tattoo: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/magento-tattoo.png
   icon-20x20: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/magento-icon-20x20.png
+hidden_outputs:
+  - private_key
+  - admin_password
+  - mysql_root_password
 abstract: |
   Single Linux server with [Magento Community
   Edition](http://www.magentocommerce.com/product/community-edition/) installed
