--- a/magento-single.yaml
+++ b/magento-single.yaml
@@ -51,10 +51,10 @@ parameters:
       Required: Server image used for all servers that are created as a part of
       this deployment.
     type: string
-    default: Ubuntu 12.04 LTS (Precise Pangolin)
+    default: Ubuntu 12.04 LTS (Precise Pangolin) (PVHVM)
     constraints:
     - allowed_values:
-      - Ubuntu 12.04 LTS (Precise Pangolin)
+      - Ubuntu 12.04 LTS (Precise Pangolin) (PVHVM)
       - CentOS 6.5
       description: Must be a supported operating system.
 
