--- a/tests.yaml
+++ b/tests.yaml
@@ -24,11 +24,11 @@ test-cases:
             use_ssh_config: True
             fabfile: test/fabric/magento.py # Path to envassert test
 
-- name: CentOS 6.5
+- name: CentOS 6 (PV)
   create:
     parameters:
       terms: true
-      image: CentOS 6.5
+      image: CentOS 6 (PV)
     timeout: 30 # Deployment should complete in under 30 minutes
   resource_tests: # Tests to run on the resources themselves
     ssh_private_key: { get_output: private_key } # Fetch from output-list of stack
