--- a/magento-single.yaml
+++ b/magento-single.yaml
@@ -55,6 +55,7 @@ parameters:
     constraints:
     - allowed_values:
       - Ubuntu 12.04 LTS (Precise Pangolin) (PVHVM)
+      - CentOS 6 (PV)
       description: Must be a supported operating system.
 
   flavor:
