--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -102,3 +102,4 @@ instructions: |
   #### Additional Notes
   There is not an automatic way to add additional nodes to this deployment.
   This deployment is meant for lower traffic or testing scenarios.
+user-input-required: true
