--- a/magento-single.yaml
+++ b/magento-single.yaml
@@ -241,7 +241,7 @@ resources:
 
   # Server resources
   magento_server:
-    type: "Rackspace::Cloud::Server"
+    type: "OS::Nova::Server"
     properties:
       name: { get_param: server_hostname }
       flavor: { get_param: flavor }
