add magento login test This adds a test which uses the outputs from the built stack to login to the Magento instance to verify the admin login works and that Magento is functional.

--- a/magento-single.yaml
+++ b/magento-single.yaml
@@ -320,6 +320,10 @@ outputs:
         params:
           "%domain%": { get_param: domain }
 
+  magento_domain:
+    description: Base domain for magento install
+    value: { get_param: domain }
+
   admin_url:
     description: Admin URL
     value:
