--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -103,3 +103,10 @@ instructions: |
   There is not an automatic way to add additional nodes to this deployment.
   This deployment is meant for lower traffic or testing scenarios.
 user-input-required: true
+description: |
+  Single Linux server with
+  [Magento 1.9.0.1 Community Edition](http://www.magentocommerce.com/product/community-edition/)
+  installed with [nginx](http://nginx.org/en/),
+  [PHP FPM](http://php-fpm.org/about/) and [MySQL 5.5](http://www.mysql.com/).
+  This deployment is intended for simple test cases and low traffic scenarios.
+  It is not designed for high traffic events and is not easily scalable.
