--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -8,6 +8,7 @@ popularity: 2
 reach-info:
   tattoo: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/magento-tattoo.png
   icon-20x20: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/magento-icon-20x20.png
+  card-icon: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/magento_logo.svg
 hidden_outputs:
   - ssh_pub_key
   - ssh_priv_key
